deploy/k8s/web-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshop-web
  template:
    metadata:
      labels:
        app: eshop-web
    spec:
      containers:
        - name: eshop-web
          image: eshopacr123.azurecr.io/eshop-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080          # ✅ به 8080 تغییر کرد
