deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-web-service
spec:
  ingressClassName: nginx
  rules:
    - host: eshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-web-service
                port:
                  number: 80
