deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx       
spec:
  ingressClassName: nginx                     
  rules:
    - host: eshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-web-service
                port:
                  number: 80
